fixed Projects title left spacing

--- a/css/index.css
+++ b/css/index.css
@@ -337,6 +337,7 @@ p {
   font-weight: bold;
   padding-bottom: 5%;
   font-family: "Quicksand", sans-serif;
+  margin-left: 5%;
   margin-top: 2%;
 }
 @media (max-width: 550px) {
@@ -344,7 +345,6 @@ p {
     width: 90%;
     text-align: left;
     font-size: 4rem;
-    padding-left: 5%;
     font-weight: bold;
     margin-bottom: 2%;
     font-family: "Quicksand", sans-serif;
