--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,13 +19,13 @@
       font-weight: bold;
       padding-bottom: 5%;
       font-family: "Quicksand", sans-serif;
-
+      margin-left: 5%;
       margin-top: 2%;
       @media @phone {
         width: 90%;
         text-align: left;
         font-size: 4rem;
-        padding-left: 5%;
+   
         font-weight: bold;
         margin-bottom: 2%;
         font-family: "Quicksand", sans-serif;
